fixing menu spacing on network analysis page

--- a/Website/networkAnalysis.css
+++ b/Website/networkAnalysis.css
@@ -3,10 +3,6 @@ h3{
     font-size: 36px;
 }
 
-a{
-    margin: 0;
-}
-
 p{
     margin-left: 10%;
     margin-right: 10%;
